# AdvancedCpp

./: .gitignore  .gitmodules  AdvancedCpp.proj.DotSettings  CMakeLists.txt  CMakeSettings.json  Folder.DotSettings  README.md  cling.yaml
advanced_cpp/: CMakeLists.txt
advanced_cpp/include/: advanced_cpp.hpp
advanced_cpp/src/: advanced_cpp.cpp  advanced_cpp_main.cpp
advanced_cpp/test/: CMakeLists.txt  advanced_cpp_test.cpp
compile_time_eval/: CMakeLists.txt
compile_time_eval/include/: auto_parameters.hpp
compile_time_eval/src/: compile_time_eval_main.cpp  compiler_explorer_01.cpp
compile_time_eval/test/: CMakeLists.txt  auto_parameters_test.cpp
constexpr/: CMakeLists.txt
constexpr/src/: constexpr_demo.cpp
constexpr/test/: CMakeLists.txt  constexpr_test.cpp
examples/: CMakeLists.txt
examples/advanced_cpp/: CMakeLists.txt
examples/advanced_cpp/include/: advanced_cpp.hpp
examples/advanced_cpp/src/: advanced_cpp.cpp  advanced_cpp_main.cpp
examples/advanced_cpp/test/: CMakeLists.txt  advanced_cpp_test.cpp
examples/rpg_dice/: CMakeLists.txt  rpg_dice.md
examples/rpg_dice/include/: rpg_dice.hpp
examples/rpg_dice/test/: rpg_dice_test.cpp
examples/tic_tac_toe/: CMakeLists.txt
examples/tic_tac_toe/include/: tic_tac_toe.hpp
examples/tic_tac_toe/src/: tic_tac_toe.cpp
examples/tic_tac_toe/test/: tic_tac_toe_test.cpp
imgui_example/: CMakeLists.txt
imgui_example/include/: imgui_example.hpp
imgui_example/src/: imgui_example.cpp
imgui_example/test/: CMakeLists.txt
lectures/: CMakeLists.txt
lectures/compile_time_eval/: CMakeLists.txt
lectures/compile_time_eval/test/: CMakeLists.txt  auto_parameters_test.cpp  class_templates_test.cpp  compile_time_eval_test.cpp  concepts_test.cpp  function_templates_test.cpp  nontype_templates.cpp
lectures/concurrency/: CMakeLists.txt
lectures/concurrency/include/: concurrency.hpp
lectures/concurrency/src/: concurrency.cpp  concurrency_main.cpp
lectures/concurrency/test/: CMakeLists.txt  concurrency_test.cpp
lectures/error_handling/: CMakeLists.txt  error-classification.md  error-handling.md
lectures/error_handling/error_code_with_query/: error_code_with_query.cpp  error_code_with_query.hpp  error_code_with_query_test.cpp
lectures/error_handling/global_error_code/: global_error_code.cpp  global_error_code.hpp  global_error_code_test.cpp
lectures/error_handling/throw_only/: throw_only.cpp  throw_only.hpp  throw_only_test.cpp
lectures/error_handling/try_catch/: try_catch.cpp  try_catch.hpp  try_catch_test.cpp
lectures/error_handling/types_expected/: types_expected.cpp  types_expected.hpp  types_expected_test.cpp
lectures/memory_and_polymorphism/: CMakeLists.txt  animal.hpp  cat.hpp  copy_move_main.cpp  dog.hpp  polymorphic_array.h  polymorphism_main.cpp  print_memory_layout.cpp
lectures/memory_and_polymorphism/include/: raii.hpp
lectures/memory_and_polymorphism/src/: polymorphism_main.cpp  raii_main.cpp
lectures/memory_and_polymorphism/test/: raii_test.cpp
lectures/resources/: CMakeLists.txt
lectures/resources/include/: resources.hpp
lectures/resources/src/: resources.cpp  resources_main.cpp
lectures/resources/test/: CMakeLists.txt  resources_test.cpp
lectures/stl/: CMakeLists.txt
lectures/stl/include/: repeated_vector_wrapper.hpp  stl.hpp  type_erasure.hpp
lectures/stl/src/: repeated_vector_wrapper.cpp  stl.cpp  stl_main.cpp
lectures/stl/test/: CMakeLists.txt  repeated_vector_wrapper_test.cpp  stl_test.cpp  type_erasure_test.cpp
lectures/variants/: CMakeLists.txt
lectures/variants/include/: variants.hpp
lectures/variants/src/: variants.cpp  variants_main.cpp
notebooks/: 010_intro.cpp  020_agenda_day_2.cpp  030_agenda_day_3.cpp  100_functions.cpp  100_getting_started.cpp  200_stl.cpp  300_memory_management.cpp  300_object_orientation.cpp  400_object_orientation.cpp  500_error_handling.cpp  500_stl.cpp  600_generic_programming.cpp  700_concurrency.cpp
operators/: CMakeLists.txt
operators/include/: hidden_friends.hpp  operators.hpp  operators_cpp20.hpp
operators/src/: hidden_friends.cpp  operators.cpp  operators_main.cpp
operators/test/: CMakeLists.txt  hidden_friends_test.cpp  operators_cpp20_test.cpp
pointers/: CMakeLists.txt
pointers/include/: array_dangers.hpp
pointers/src/: array_dangers.cpp  pointers.cpp  pointers_main.cpp
slides/: 010_intro.html  020_agenda.html  020_agenda_day_1.html  030_agenda_day_2.html  040_agenda_day_3.html  050_topics_covered.html  100_getting_started.html  200_stl.html  300_memory_management.html  400_object_orientation.html  500_error_handling.html  600_generic_programming.html
workshops/: CMakeLists.txt
workshops/rpg_dice_sk/: CMakeLists.txt
workshops/rpg_dice_sk/include/: rpg_dice_sk.hpp
workshops/rpg_dice_sk/src/: rpg_dice_sk.cpp  rpg_dice_sk_main.cpp
workshops/rpg_dice_sk/test/: CMakeLists.txt  rpg_dice_sk_test.cpp
workshops/solutions/: CMakeLists.txt
workshops/solutions/include/: int_range.hpp  pair.hpp  ring_buffer.hpp  solutions.hpp  templates.hpp
workshops/solutions/src/: ce_get_op_impl.cpp  int_range.cpp  ring_buffer.cpp  solutions.cpp  solutions_main.cpp
workshops/solutions/test/: CMakeLists.txt  int_range_test.cpp  pair_test.cpp  ring_buffer_test.cpp  solutions_test.cpp  templates_test.cpp
workshops/solutions_100/: CMakeLists.txt
workshops/solutions_100/include/: solutions_100.hpp
workshops/solutions_100/src/: solutions_100.cpp  solutions_100_main.cpp
workshops/solutions_100/test/: CMakeLists.txt  solutions_100_test.cpp
workshops/starter_kit/: CMakeLists.txt
workshops/starter_kit/include/: starter_kit.hpp  tic_tac_toe.hpp
workshops/starter_kit/src/: starter_kit.cpp  starter_kit_main.cpp  tic_tac_toe.cpp  tic_tac_toe_main.cpp
workshops/starter_kit/test/: CMakeLists.txt  starter_kit_test.cpp  tic_tac_toe_test.cpp
workshops/starter_kit_100/: CMakeLists.txt
workshops/starter_kit_100/include/: starter_kit_100.hpp
workshops/starter_kit_100/src/: starter_kit_100.cpp  starter_kit_100_main.cpp
workshops/starter_kit_100/test/: CMakeLists.txt  starter_kit_100_test.cpp
(+49 files in other folders)
